Ajuste no k8s para a stack / Ajuste no customer para permitir nome e sobrenome (padrão keycloak)
